Fixing theme to handle backgrounds that stretch 100%

--- a/docroot/sites/all/themes/son/css/layouts/responsive-sidebars-rtl.css
+++ b/docroot/sites/all/themes/son/css/layouts/responsive-sidebars-rtl.css
@@ -34,15 +34,13 @@
 /* line 28, ../../sass/layouts/responsive-sidebars.scss */
 #page,
 .region-bottom {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
+  max-width: 100%;
 }
 
 /*
  * Apply the shared properties of grid items in a single, efficient ruleset.
  */
-/* line 44, ../../sass/layouts/responsive-sidebars.scss */
+/* line 42, ../../sass/layouts/responsive-sidebars.scss */
 #header,
 #content,
 #navigation,
@@ -77,11 +75,21 @@
   clear: both;
 }
 
+/* line 59, ../../sass/layouts/responsive-sidebars.scss */
+#header,
+.region-eyebrow,
+#hilighted,
+#main {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
 /*
  * Navigation bar
  */
 @media all and (min-width: 480px) {
-  /* line 63, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 70, ../../sass/layouts/responsive-sidebars.scss */
   #main {
     position: relative;
   }
@@ -93,7 +101,7 @@
   /*
    * The layout when there is only one sidebar, the left one.
    */
-  /* line 79, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 86, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-first #content {
     /* Span 2 columns, starting in 2nd column from left. */
     float: right;
@@ -101,7 +109,7 @@
     margin-right: 33.333%;
     margin-left: -100%;
   }
-  /* line 83, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 90, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-first .region-sidebar-first {
     /* Span 1 column, starting in 1st column from left. */
     float: right;
@@ -113,7 +121,7 @@
   /*
    * The layout when there is only one sidebar, the right one.
    */
-  /* line 93, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 100, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-second #content {
     /* Span 2 columns, starting in 1st column from left. */
     float: right;
@@ -121,7 +129,7 @@
     margin-right: 0%;
     margin-left: -66.667%;
   }
-  /* line 97, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 104, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-second .region-sidebar-second {
     /* Span 1 column, starting in 3rd column from left. */
     float: right;
@@ -133,7 +141,7 @@
   /*
    * The layout when there are two sidebars.
    */
-  /* line 107, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 114, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars #content {
     /* Span 2 columns, starting in 2nd column from left. */
     float: right;
@@ -141,7 +149,7 @@
     margin-right: 33.333%;
     margin-left: -100%;
   }
-  /* line 111, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 118, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-first {
     /* Span 1 column, starting in 1st column from left. */
     float: right;
@@ -149,7 +157,7 @@
     margin-right: 0%;
     margin-left: -33.333%;
   }
-  /* line 115, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 122, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-second {
     /* Start a new row and span all 3 columns. */
     float: right;
@@ -160,7 +168,7 @@
     padding-right: 0;
     clear: right;
   }
-  /* line 120, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 127, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-second .block {
     padding-left: 10px;
     padding-right: 10px;
@@ -170,7 +178,7 @@
     box-sizing: border-box;
     word-wrap: break-word;
   }
-  /* line 123, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 130, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n+1) {
     /* Span 1 column, starting in the 1st column from left. */
     float: right;
@@ -179,7 +187,7 @@
     margin-left: -33.333%;
     clear: right;
   }
-  /* line 127, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 134, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n+2) {
     /* Span 1 column, starting in the 2nd column from left. */
     float: right;
@@ -187,7 +195,7 @@
     margin-right: 33.333%;
     margin-left: -66.667%;
   }
-  /* line 130, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 137, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-second .block:nth-child(3n) {
     /* Span 1 column, starting in the 3rd column from left. */
     float: right;
@@ -203,7 +211,7 @@
   /*
    * The layout when there is only one sidebar, the left one.
    */
-  /* line 148, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 155, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-first #content {
     /* Span 10 columns, starting in 3rd column from left. */
     float: right;
@@ -211,7 +219,7 @@
     margin-right: 16.667%;
     margin-left: -100%;
   }
-  /* line 152, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 159, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-first .region-sidebar-first {
     /* Span 2 columns, starting in 1st column from left. */
     float: right;
@@ -223,7 +231,7 @@
   /*
    * The layout when there is only one sidebar, the right one.
    */
-  /* line 162, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 169, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-second #content {
     /* Span 9 columns, starting in 1st column from left. */
     float: right;
@@ -231,7 +239,7 @@
     margin-right: 0%;
     margin-left: -75%;
   }
-  /* line 166, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 173, ../../sass/layouts/responsive-sidebars.scss */
   .sidebar-second .region-sidebar-second {
     /* Span 3 column3, starting in 10th column from left. */
     float: right;
@@ -243,7 +251,7 @@
   /*
    * The layout when there are two sidebars.
    */
-  /* line 176, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 183, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars #content {
     /* Span 7 columns, starting in 3rd column from left. */
     float: right;
@@ -251,7 +259,7 @@
     margin-right: 16.667%;
     margin-left: -75%;
   }
-  /* line 180, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 187, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-first {
     /* Span 2 columns, starting in 1st column from left. */
     float: right;
@@ -259,7 +267,7 @@
     margin-right: 0%;
     margin-left: -16.667%;
   }
-  /* line 184, ../../sass/layouts/responsive-sidebars.scss */
+  /* line 191, ../../sass/layouts/responsive-sidebars.scss */
   .two-sidebars .region-sidebar-second {
     /* Span 3 column3, starting in 10th column from left. */
     float: right;
