--- a/docroot/sites/all/themes/son/sass/layouts/responsive-sidebars.scss
+++ b/docroot/sites/all/themes/son/sass/layouts/responsive-sidebars.scss
@@ -26,9 +26,7 @@ $zen-auto-include-item-base: false;
 
 #page,
 .region-bottom {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
+  max-width: 100%;
 }
 
 /*
@@ -53,6 +51,15 @@ $zen-auto-include-item-base: false;
 #main,
 #footer {
   @include zen-grid-container();
+}
+
+#header,
+.region-eyebrow,
+#hilighted,
+#main {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
 }
 
 /*
